--- a/clusters/deploy.yaml
+++ b/clusters/deploy.yaml
@@ -1,13 +1,13 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: capstone-app
+  name: capstone-apps
   labels:
-    app: capstone-app
+    app: capstone-apps
 spec:
   selector:
     matchLabels:
-      app: capstone-app
+      app: capstone-apps
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -18,7 +18,7 @@ spec:
   template:
     metadata:
       labels:
-        app: capstone-app
+        app: capstone-apps
     spec:
       terminationGracePeriodSeconds: 60
       affinity:
@@ -29,7 +29,7 @@ spec:
               - key: "app"
                 operator: In
                 values:
-                - capstone-app
+                - capstone-apps
               - key: "temporary"
                 operator: In
                 values:
@@ -67,11 +67,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: capstone-app
+  name: capstone-apps
 spec:
   type: LoadBalancer
   selector:
-    app: capstone-app
+    app: capstone-apps
   ports:
     - name: helloword-http
       protocol: TCP
@@ -86,12 +86,12 @@ spec:
 kind: HorizontalPodAutoscaler
 apiVersion: autoscaling/v1
 metadata:
-  name: capstone-app
+  name: capstone-apps
 spec:
   scaleTargetRef:
     apiVersion: extensions/v1beta1
     kind: Deployment
-    name: capstone-app
+    name: capstone-apps
   minReplicas: 2
   maxReplicas: 5
   targetCPUUtilizationPercentage: 80
